fix(emptystate): use default text align instead of foring it to left align to overcome rtl issue

--- a/packages/react/src/components/EmptyState/_emptystate.scss
+++ b/packages/react/src/components/EmptyState/_emptystate.scss
@@ -17,19 +17,16 @@
   &--content {
     max-width: 30rem;
     overflow-wrap: break-word;
-    text-align: left;
   }
 
   &--title {
     @include type-style('productive-heading-03');
     color: $text-01;
-    text-align: left;
     margin-bottom: $spacing-03;
   }
 
   &--text {
     color: $text-01;
-    text-align: left;
     @include type-style('body-short-01');
   }
 
